[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Scenes/thrishaStuff/Audio/MouseClick.wav" type="AudioStream" id=2]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -9.0
margin_right = 250.0
margin_bottom = 191.0
text = "Main Menu"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 2 )

[connection signal="button_down" from="MainMenu" to="." method="_on_MainMenu_button_down"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
